--- a/src/main/resources/assets/ix_api/lang/en_us.json
+++ b/src/main/resources/assets/ix_api/lang/en_us.json
@@ -4,5 +4,6 @@
   "info.ix_api.minors_consumes_alcohol": "Minors are prohibited from consuming alcohol.",
   "info.ix_api.ownable_data.next": "Changed %s 's OwnableFlag to %s",
   "info.ix_api.owner_setter.set_owner": "Set %s 's owner to %s",
-  "item.ix_api.damage_tester_spawn_egg": "Damage Tester Spawn Egg"
+  "item.ix_api.damage_tester_spawn_egg": "Damage Tester Spawn Egg",
+  "item.ix_api.owner_setter": "Owner Setter"
 }
